# computational-intelligence

./: README.md
lab1/: README.md  gx_utils.py  lab1_set-covering-tree.ipynb  lab1_set-covering.ipynb  pyproject.toml
lab2/: README.md  lab2_set_covering.ipynb
lab2/stats/: stats.csv
lab3/: README.md  lab3_nim.ipynb  pyproject.toml
