[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Salvatore Licata s295798 <s295798@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
